# FRENSIE-Docker-UW-Cluster

./: CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt  Dockerfile.in  build-base.sh.in  run-base.sh.in
build-deps/: CMakeLists.txt  Dockerfile.in  build-deps.sh.in  run-deps.sh.in
cmake/: Macros.cmake  Version.cmake
frensie-checkout/: CMakeLists.txt  Dockerfile.in  build-frensie-checkout.sh.in  env.sh.in  frensie.sh.in  run-frensie-checkout.sh.in
frensie-update/: CMakeLists.txt  Dockerfile.in  build-frensie-update.sh.in  frensie-env.sh.in  run-frensie-update.sh.in
scripts/: clean-docker.sh.in  frensie-docker.sh
